fix: queue chips being cut off

--- a/src/features/myAccounts/components/AccountItems/styles.module.css
+++ b/src/features/myAccounts/components/AccountItems/styles.module.css
@@ -52,7 +52,7 @@
 .safeLink {
   display: grid;
   padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
-  grid-template-columns: 60px 10fr 3fr 3fr;
+  grid-template-columns: 60px 10fr 2fr 3fr;
   align-items: center;
 }
 
